--- a/problems.html
+++ b/problems.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="sidebar.css">
+        <link rel="stylesheet" href="problems.css">
         <title>the thing</title>
     </head>
     <body>
