underline current tab

--- a/problems.html
+++ b/problems.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id="sidebar">
-            <a href="">Problems</a>
+            <a href=""><u>Problems</u></a>
             <a href="">Calls</a>
             <a href="">Users</a>
             <a href="">Specialists</a>
