--- a/specialist.html
+++ b/specialist.html
@@ -7,10 +7,10 @@
     </head>
     <body>
         <div id="sidebar">
-            <a href=""><u>Problems</u></a>
+            <a href="">Problems</a>
             <a href="">Calls</a>
             <a href="">Users</a>
-            <a href="">Specialists</a>
+            <a href=""><u>Specialists</u></a>
         </div>
         <div id="main">
             <p style="font-size: 25px; padding-left: 1em;">Specialists</p>
