Added Equipment and Software to sidepanel tab
Added line 14 and 15

--- a/problems.html
+++ b/problems.html
@@ -11,6 +11,8 @@
             <a href="">Calls</a>
             <a href="">Users</a>
             <a href="">Specialists</a>
+            <a href="">Equipment</a>
+            <a href="">Software</a>
         </div>
         <div id="main">
             <p style="font-size: 25px; padding-left: 1em;">Problems</p>
