changed specialists to bubbles

--- a/specialist.html
+++ b/specialist.html
@@ -15,28 +15,42 @@
         <div id="main">
             <p style="font-size: 25px; padding-left: 1em;">Specialists</p>
             <!-- Specialist/speciality/Current tasks -->
+        <div id="titles">
             <table>
                 <tr>
                     <th>Name</th>
-                    <th>Speciality</th>
+                    <th style="width:50%;">Speciality</th>
                     <th style="width: 15%;">Current tasks</th>
                 </tr>
+            </table>
+        </div>
+        <div class="specialist">
+            <table>
                 <tr>
                     <td>Obama Barack</td>
-                    <td>Word Processor Tables</td>
-                    <td>2</td>
-                </tr>
-                <tr>
-                    <td>Alexis Ohanian</td>
-                    <td>Word Processing</td>
-                    <td>5</td>
-                </tr>
-                <tr>
-                    <td>...</td>
-                    <td>...</td>
-                    <td>...</td>
+                    <td style="width:50%;">Word Processor Tables</td>
+                    <td style="width: 15%;">2</td>
                 </tr>
             </table>
+        </div>
+        <div class="specialist">
+            <table>
+                <tr>
+                    <td>Alexis Ohanian</td>
+                    <td style="width:50%;">Word Processing</td>
+                    <td style="width: 15%;">5</td>
+                </tr>
+            </table>
+        </div>
+        <div class="specialist">
+            <table>
+                <tr>
+                    <td>...</td>
+                    <td style="width:50%;">...</td>
+                    <td style="width: 15%;">...</td>
+                </tr>
+            </table>
+        </div>
         </div>
     </body>
 </html>
