add problem button

--- a/problems.html
+++ b/problems.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="sidebar.css">
         <link rel="stylesheet" href="problems.css">
-        <title>the thing</title>
+        <title>Problems</title>
     </head>
     <body>
         <div id="sidebar">
@@ -39,6 +39,7 @@
                     </tr>
                 </table>
             </div>
+            <a href=""><p style="font-size: 35px; padding-left: 1em;">+</p></a>
         </div>
     </body>
 </html>
