add new problem section

--- a/problems.html
+++ b/problems.html
@@ -39,7 +39,27 @@
                     </tr>
                 </table>
             </div>
-            <a href=""><p style="font-size: 35px; padding-left: 1em;">+</p></a>
+            <div class="problem">
+                <form>
+                    <table>
+                        <tr>
+                            <td style="width:10%;">No. 3</td>
+                            <td>Type:  <select>
+                                <option>Printing</option>
+                                <option>Printer Software</option>
+                                <option>Printer Queue Cancellation</option>
+                            </select></td>
+                        </tr>
+                        <tr>
+                            <td colspan="2"><textarea rows="4"></textarea></td>
+                        </tr>
+                        <tr>
+                            <td style="width:10%;"><input type="submit" value="Add"></td>
+                            <td></td>
+                        </tr>
+                    </table>
+                </form>
+            </div>
         </div>
     </body>
 </html>
