--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
                 let username = document.getElementById("username").value;
                 let password = document.getElementById("password").value;
                 if ((username === "username") && (password === "password")) {
-                    window.location = "problems.html";
+                    window.location.href = "/problems.html";
                     // alert("yes");
                 } else {
                     document.getElementById("error").innerHTML = "Incorrect username or password";
