--- a/equipment.html
+++ b/equipment.html
@@ -7,12 +7,12 @@
     </head>
     <body>
         <div id="sidebar">
-            <a href="">Problems</a>
-            <a href="">Calls</a>
-            <a href="">Users</a>
-            <a href="">Specialists</a>
-            <a href=""><u>Equipment</u></a>
-            <a href="">Software</a>
+            <a href="problems.html">Problems</a>
+            <a href="calls.html">Calls</a>
+            <a href="users.html">Users</a>
+            <a href="specialist.html">Specialists</a>
+            <a href="equipment.html"><u>Equipment</u></a>
+            <a href="software.html">Software</a>
         </div>
         <div id="main">
             <p style="font-size: 25px; padding-left: 1em;">Equipment</p>
