--- a/problems.html
+++ b/problems.html
@@ -7,12 +7,12 @@
     </head>
     <body>
         <div id="sidebar">
-            <a href=""><u>Problems</u></a>
-            <a href="">Calls</a>
-            <a href="">Users</a>
-            <a href="">Specialists</a>
-            <a href="">Equipment</a>
-            <a href="">Software</a>
+            <a href="problems.html"><u>Problems</u></a>
+            <a href="calls.html">Calls</a>
+            <a href="users.html">Users</a>
+            <a href="specialist.html">Specialists</a>
+            <a href="equipment.html">Equipment</a>
+            <a href="software.html">Software</a>
         </div>
         <div id="main">
             <p style="font-size: 25px; padding-left: 1em;">Problems</p>
