--- a/software.html
+++ b/software.html
@@ -7,12 +7,12 @@
     </head>
     <body>
         <div id="sidebar">
-            <a href="">Problems</a>
-            <a href="">Calls</a>
-            <a href="">Users</a>
-            <a href="">Specialists</a>
-            <a href="">Equipment</u></a>
-            <a href=""><u>Software</u></a>
+            <a href="problems.html">Problems</a>
+            <a href="calls.html">Calls</a>
+            <a href="users.html">Users</a>
+            <a href="specialist.html">Specialists</a>
+            <a href="equipment.html">Equipment</u></a>
+            <a href="software.html"><u>Software</u></a>
         </div>
         <div id="main">
             <p style="font-size: 25px; padding-left: 1em;">Software</p>
