--- a/specialist.html
+++ b/specialist.html
@@ -7,12 +7,12 @@
     </head>
     <body>
         <div id="sidebar">
-            <a href="">Problems</a>
-            <a href="">Calls</a>
-            <a href="">Users</a>
-            <a href=""><u>Specialists</u></a>
-            <a href="">Equipment</a>
-            <a href="">Software</a>
+            <a href="problems.html">Problems</a>
+            <a href="calls.html">Calls</a>
+            <a href="users.html">Users</a>
+            <a href="specialist.html"><u>Specialists</u></a>
+            <a href="equipment.html">Equipment</a>
+            <a href="software.html">Software</a>
         </div>
         <div id="main">
             <p style="font-size: 25px; padding-left: 1em;">Specialists</p>
