--- a/users.html
+++ b/users.html
@@ -7,10 +7,12 @@
     </head>
     <body>
         <div id="sidebar">
-            <a href="">Problems</a>
-            <a href="">Calls</a>
-            <a href=""><u>Users</u></a>
-            <a href="">Specialists</a>
+            <a href="problems.html">Problems</a>
+            <a href="calls.html">Calls</a>
+            <a href="users.html"><u>Users</u></a>
+            <a href="specialist.html">Specialists</a>
+            <a href="equipment.html">Equipment</a>
+            <a href="software.html">Software</a>
         </div>
         <div id="main">
           <p style="font-size: 25px; padding-left: 1em;">Users</p>
