--- a/users.html
+++ b/users.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="sidebar.css">
         <link rel="stylesheet" href="users.css">
-        <title>the thing</title>
+        <title>Users</title>
     </head>
     <body>
         <div id="sidebar">
@@ -15,50 +15,61 @@
             <a href="software.html">Software</a>
         </div>
         <div id="main">
-          <p style="font-size: 25px; padding-left: 1em;">Users</p>
-          <!--problem type (list)
-              problem number(s)
-               -->
+            <img src="logo.png" style="display: block; margin-left: auto; margin-right: auto; ">
+            <p style="font-size: 25px; padding-left: 1em;">Users</p>
+            <!--problem type (list)
+                problem number(s)
+                -->
 
-          <div class="user">
-              <table>
-                  <tr>
-                      <td style="width: 27%; font-size: 18px"><b>Name:</b></td><td>Joe Gardener</td>
-                  </tr>
-                  <tr>
-                      <td style="width: 27%; font-size: 18px"><b>ID number:</b></td><td>123123</td>
-                  </tr>
-                  <tr>
-                      <td style="width: 27%; font-size: 18px"><b>Job title:</b></td><td>Consultant</td>
-                  </tr>
-                  <tr>
-                      <td style="width: 27%; font-size: 18px"><b>Department:</b></td><td>Research</td>
-                  </tr>
-                  <tr>
-                      <td style="width: 27%; font-size: 18px"><b>Telephone number:</b></td><td>02383 284731</td>
-                  </tr>
-              </table>
-          </div>
+            <div class="user">
+                <table>
+                    <tr>
+                        <td style="width: 27%; font-size: 18px"><b>Name:</b></td>
+                        <td>Joe Gardener</td>
+                    </tr>
+                    <tr>
+                        <td style="width: 27%; font-size: 18px"><b>ID number:</b></td>
+                        <td>123123</td>
+                    </tr>
+                    <tr>
+                        <td style="width: 27%; font-size: 18px"><b>Job title:</b></td>
+                        <td>Consultant</td>
+                    </tr>
+                    <tr>
+                        <td style="width: 27%; font-size: 18px"><b>Department:</b></td>
+                        <td>Research</td>
+                    </tr>
+                    <tr>
+                        <td style="width: 27%; font-size: 18px"><b>Telephone number:</b></td>
+                        <td>02383 284731</td>
+                    </tr>
+                </table>
+            </div>
 
-          <div class="user">
-              <table>
-                  <tr>
-                      <td style="width: 27%; font-size: 18px"><b>Name:</b></td><td>...</td>
-                  </tr>
-                  <tr>
-                      <td style="width: 27%; font-size: 18px"><b>ID number:</b></td><td>...</td>
-                  </tr>
-                  <tr>
-                      <td style="width: 27%; font-size: 18px"><b>Job title:</b></td><td>...</td>
-                  </tr>
-                  <tr>
-                      <td style="width: 27%; font-size: 18px"><b>Department:</b></td><td>...</td>
-                  </tr>
-                  <tr>
-                      <td style="width: 27%; font-size: 18px"><b>Telephone number:</b></td><td>...</td>
-                  </tr>
-              </table>
-          </div>
+            <div class="user">
+                <table>
+                    <tr>
+                        <td style="width: 27%; font-size: 18px"><b>Name:</b></td>
+                        <td>...</td>
+                    </tr>
+                    <tr>
+                        <td style="width: 27%; font-size: 18px"><b>ID number:</b></td>
+                        <td>...</td>
+                    </tr>
+                    <tr>
+                        <td style="width: 27%; font-size: 18px"><b>Job title:</b></td>
+                        <td>...</td>
+                    </tr>
+                    <tr>
+                        <td style="width: 27%; font-size: 18px"><b>Department:</b></td>
+                        <td>...</td>
+                    </tr>
+                    <tr>
+                        <td style="width: 27%; font-size: 18px"><b>Telephone number:</b></td>
+                        <td>...</td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </body>
 </html>
