--- a/specialist.html
+++ b/specialist.html
@@ -15,6 +15,7 @@
             <a href="software.html">Software</a>
         </div>
         <div id="main">
+            <img src="logo.png" style="display: block; margin-left: auto; margin-right: auto; ">
             <p style="font-size: 25px; padding-left: 1em;">Specialists</p>
             <!-- Specialist/speciality/Current tasks -->
         <div id="titles">
