--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </head>
     <body>
         <div id="login">
-                <label for="username">Username: </label><input type="text" placeholder="Enter Username" id="username" required>
+                <label for="username">Username: </label><input type="text" placeholder="Enter Username" id="username" required><br>
                 <label for="password">Password: </label><input type="password" placeholder="Enter Password" id="password" required><br>
                 <button onclick="login()">Login</button>
             <p id="error"></p>
