Updated problems boxes
Shows assigned specialist and status of the problem

--- a/problems.html
+++ b/problems.html
@@ -25,20 +25,24 @@
                     <tr>
                         <td style="width: 10%">No. 1</td>
                         <td>Type:</td>
+                        <td>Assigned Specialist:</td>
+                        <td>Status:</td>
                     </tr>
                     <tr>
-                        <td colspan="2">problem description</td>
+                        <td colspan="4">problem description</td>
                     </tr>
                 </table>
             </div>
             <div class="problem">
                 <table>
                     <tr>
-                        <td style="width: 10%">No. 2</td>
+                        <td style="width: 10%">No. 1</td>
                         <td>Type:</td>
+                        <td>Assigned Specialist:</td>
+                        <td>Status:</td>
                     </tr>
                     <tr>
-                        <td colspan="2">another problem description</td>
+                        <td colspan="4">another problem description</td>
                     </tr>
                 </table>
             </div>
