--- a/problems.html
+++ b/problems.html
@@ -26,7 +26,7 @@
                         <td style="width: 10%">No. 1</td>
                         <td>Type:</td>
                         <td>Assigned Specialist:</td>
-                        <td>Status:</td>
+                        <td>Status: Pending</td>
                     </tr>
                     <tr>
                         <td colspan="4">problem description</td>
@@ -39,7 +39,7 @@
                         <td style="width: 10%">No. 1</td>
                         <td>Type:</td>
                         <td>Assigned Specialist:</td>
-                        <td>Status:</td>
+                        <td>Status: Pending</td>
                     </tr>
                     <tr>
                         <td colspan="4">another problem description</td>
