--- a/equipment.html
+++ b/equipment.html
@@ -18,18 +18,24 @@
             <img src="logo.png" style="display: block; margin-left: auto; margin-right: auto; ">
             <p style="font-size: 25px; padding-left: 1em;">Equipment</p>
             <!-- Specialist/speciality/Current tasks -->
-            <table>
-                <tr>
-                    <th>Serial Number</th>
-                    <th>Type</th>
-                    <th>Make</th>
-                </tr>
-                <tr>
-                    <td>...</td>
-                    <td>...</td>
-                    <td>...</td>
-                </tr>
-            </table>
+            <div id="titles">
+                <table>
+                    <tr>
+                        <th>Serial Number</th>
+                        <th>Type</th>
+                        <th>Make</th>
+                    </tr>
+                </table>
+            </div>
+            <div class="equipment">
+                <table>
+                    <tr>
+                        <td>...</td>
+                        <td>...</td>
+                        <td>...</td>
+                    </tr>    
+                </table>
+            </div>
         </div>
     </body>
 </html>
