--- a/users.html
+++ b/users.html
@@ -20,55 +20,39 @@
             <!--problem type (list)
                 problem number(s)
                 -->
-
-            <div class="user">
-                <table>
-                    <tr>
-                        <td style="width: 27%; font-size: 18px"><b>Name:</b></td>
-                        <td>Joe Gardener</td>
-                    </tr>
-                    <tr>
-                        <td style="width: 27%; font-size: 18px"><b>ID number:</b></td>
-                        <td>123123</td>
-                    </tr>
-                    <tr>
-                        <td style="width: 27%; font-size: 18px"><b>Job title:</b></td>
-                        <td>Consultant</td>
-                    </tr>
-                    <tr>
-                        <td style="width: 27%; font-size: 18px"><b>Department:</b></td>
-                        <td>Research</td>
-                    </tr>
-                    <tr>
-                        <td style="width: 27%; font-size: 18px"><b>Telephone number:</b></td>
-                        <td>02383 284731</td>
-                    </tr>
-                </table>
-            </div>
-
-            <div class="user">
-                <table>
-                    <tr>
-                        <td style="width: 27%; font-size: 18px"><b>Name:</b></td>
-                        <td>...</td>
-                    </tr>
-                    <tr>
-                        <td style="width: 27%; font-size: 18px"><b>ID number:</b></td>
-                        <td>...</td>
-                    </tr>
-                    <tr>
-                        <td style="width: 27%; font-size: 18px"><b>Job title:</b></td>
-                        <td>...</td>
-                    </tr>
-                    <tr>
-                        <td style="width: 27%; font-size: 18px"><b>Department:</b></td>
-                        <td>...</td>
-                    </tr>
-                    <tr>
-                        <td style="width: 27%; font-size: 18px"><b>Telephone number:</b></td>
-                        <td>...</td>
-                    </tr>
-                </table>
+                <div id="titles">
+                    <table>
+                        <tr>
+                            <th>Name:</th>
+                            <th>ID number:</th>
+                            <th>Job Title:</th>
+                            <th>Department:</th>
+                            <th>Telephone Number:</th>
+                        </tr>
+                    </table>
+                </div>
+                <div class="users">
+                    <table>
+                        <tr>
+                            <td>Joe Gardener</td>
+                            <td>123123</td>
+                            <td>Consultant</td>
+                            <td>Research</td>
+                            <td>02383284731</td>
+                        </tr>  
+                    </table>
+                </div>
+                <div class="users">
+                    <table>
+                        <tr>
+                            <td>...</td>
+                            <td>...</td>
+                            <td>...</td>
+                            <td>...</td>
+                            <td>...</td>
+                        </tr>  
+                    </table>
+                </div>
             </div>
         </div>
     </body>
