--- a/software.html
+++ b/software.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="sidebar.css">
-        <link rel="stylesheet" href="equipment.css">
+        <link rel="stylesheet" href="software.css">
         <title>Software</title>
     </head>
     <body>
@@ -18,20 +18,26 @@
             <img src="logo.png" style="display: block; margin-left: auto; margin-right: auto; ">
             <p style="font-size: 25px; padding-left: 1em;">Software</p>
             <!-- Specialist/speciality/Current tasks -->
-            <table>
-                <tr>
-                    <th>Name</th>
-                    <th>License End Date</th>
-                    <th>Make</th>
-                    <th>OS Supported</th>
-                </tr>
-                <tr>
-                    <td>...</td>
-                    <td>...</td>
-                    <td>...</td>
-                    <td>...</td>
-                </tr>
-            </table>
+            <div id="titles">
+                <table>
+                    <tr>
+                        <th>Name</th>
+                        <th>License End Date</th>
+                        <th>Make</th>
+                        <th>OS Supported</th>
+                    </tr>
+                </table>
+            </div>
+            <div class="software">
+                <table>
+                    <tr>
+                        <td>...</td>
+                        <td>...</td>
+                        <td>...</td>
+                        <td>...</td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </body>
 </html>
